// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <Check /> should render Check with theme disabled props 1`] = `
.c0 {
  opacity: 0;
  position: absolute;
  right: 0;
}

.c0:checked + label:after {
  opacity: 1;
  -webkit-transform: rotate(45deg) scale(1);
  -ms-transform: rotate(45deg) scale(1);
  transform: rotate(45deg) scale(1);
}

<input
  className="c0"
/>
`;

exports[`Test <Check /> should render Check with theme props 1`] = `
.c0 {
  opacity: 0;
  position: absolute;
  right: 0;
}

.c0:checked + label:after {
  opacity: 1;
  -webkit-transform: rotate(45deg) scale(1);
  -ms-transform: rotate(45deg) scale(1);
  transform: rotate(45deg) scale(1);
}

<input
  className="c0"
/>
`;

exports[`Test <Container /> should render Container with theme props 1`] = `
.c0 {
  display: inline-block;
  position: relative;
}

.c0 + .c0 {
  margin-left: 1em;
}

<span
  className="c0"
/>
`;

exports[`Test <Label /> should render Label with disabled 1`] = `
.c0 {
  cursor: pointer;
  display: inline-block;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  color: #1D3141;
  color: #d6d6d6;
  line-height: 24px;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 30px;
}

.c0:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  width: 20px;
  height: 20px;
  border: 1px solid;
  border-color: #d6d6d6;
  background-color: #ffffff;
  border-radius: 3px;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
}

.c0:hover:before {
  background-color: #f6f6f6;
}

.c0:after {
  border: solid #0099cf;
  border-width: 0 3px 3px 0;
  content: '';
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  height: 10px;
  left: 7px;
  top: 2.5px;
  opacity: 0;
  position: absolute;
  -webkit-transform: rotate(45deg) scale(0);
  -ms-transform: rotate(45deg) scale(0);
  transform: rotate(45deg) scale(0);
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  width: 5px;
}

<label
  className="c0"
  disabled={true}
/>
`;

exports[`Test <Label /> should render Label with error 1`] = `
.c0 {
  cursor: pointer;
  display: inline-block;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  color: #1D3141;
  color: #f80000;
  line-height: 24px;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 30px;
}

.c0:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  width: 20px;
  height: 20px;
  border: 1px solid;
  border-color: #a6adb4;
  background-color: #ffffff;
  border-radius: 3px;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
}

.c0:after {
  border: solid #0099cf;
  border-width: 0 3px 3px 0;
  content: '';
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  height: 10px;
  left: 7px;
  top: 2.5px;
  opacity: 0;
  position: absolute;
  -webkit-transform: rotate(45deg) scale(0);
  -ms-transform: rotate(45deg) scale(0);
  transform: rotate(45deg) scale(0);
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  width: 5px;
}

<label
  className="c0"
/>
`;

exports[`Test <Label /> should render Label with theme props 1`] = `
.c0 {
  cursor: pointer;
  display: inline-block;
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  color: #1D3141;
  line-height: 24px;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding-left: 30px;
}

.c0:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  width: 20px;
  height: 20px;
  border: 1px solid;
  border-color: #a6adb4;
  background-color: #ffffff;
  border-radius: 3px;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
}

.c0:after {
  border: solid #0099cf;
  border-width: 0 3px 3px 0;
  content: '';
  font-family: "proxima-nova","Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  height: 10px;
  left: 7px;
  top: 2.5px;
  opacity: 0;
  position: absolute;
  -webkit-transform: rotate(45deg) scale(0);
  -ms-transform: rotate(45deg) scale(0);
  transform: rotate(45deg) scale(0);
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  width: 5px;
}

<label
  className="c0"
/>
`;
